force-app/main/default/objects/Opportunity_Stage__c/Opportunity_Stage__c.object-meta.xml
<CustomObject>
    <label>SP Opportunity Stage</label>
    <nameField>
        <label>Opportunity Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SP Opportunity Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>