force-app/main/default/objects/Opportunity_Stage__c/fields/Advance_Stage_Visualforce_Page__c.field-meta.xml
<CustomField>
    <fullName>Advance_Stage_Visualforce_Page__c</fullName>
    <label>Advance Stage Visualforce Page</label>
    <length>100</length>
    <type>Text</type>
</CustomField>