force-app/main/default/objects/Opportunity_Stage__c/fields/Advancement_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Criteria__c</fullName>
    <label>Advancement Criteria</label>
    <type>TextArea</type>
</CustomField>