force-app/main/default/objects/Opportunity_Stage__c/fields/EAM_Collaboration_Points__c.field-meta.xml
<CustomField>
    <fullName>EAM_Collaboration_Points__c</fullName>
    <label>EAM Collaboration Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>