force-app/main/default/objects/Opportunity_Stage__c/fields/Forbid_Deleting_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Forbid_Deleting_Line_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forbid Deleting Line Items</label>
    <type>Checkbox</type>
</CustomField>