force-app/main/default/objects/Opportunity_Stage__c/fields/Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>Next_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Stage immediately following this Stage.</inlineHelpText>
    <label>Next Stage</label>
    <referenceTo>Opportunity_Stage__c</referenceTo>
    <relationshipName>Opportunity_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>