force-app/main/default/objects/Opportunity_Stage__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Stage</label>
    <referenceTo>Opportunity_Stage__c</referenceTo>
    <relationshipName>Opportunity_Stages1</relationshipName>
    <type>Lookup</type>
</CustomField>