force-app/main/default/objects/Opportunity_Stage__c/fields/Reference_Title_1__c.field-meta.xml
<CustomField>
    <fullName>Reference_Title_1__c</fullName>
    <label>Reference Title 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>