force-app/main/default/objects/Opportunity_Stage__c/fields/Reference_URL_1__c.field-meta.xml
<CustomField>
    <fullName>Reference_URL_1__c</fullName>
    <label>Reference URL 1</label>
    <type>Url</type>
</CustomField>