force-app/main/default/objects/Opportunity_Stage__c/fields/Reference_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Reference_URL_2__c</fullName>
    <label>Reference URL 2</label>
    <type>Url</type>
</CustomField>