force-app/main/default/objects/Opportunity_Stage__c/fields/Stage_ID__c.field-meta.xml
<CustomField>
    <fullName>Stage_ID__c</fullName>
    <externalId>true</externalId>
    <label>Stage ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>