force-app/main/default/objects/Opportunity_Stage__c/fields/Stage_Number__c.field-meta.xml
<CustomField>
    <fullName>Stage_Number__c</fullName>
    <inlineHelpText>Order # of this Stage in the list of Stages.</inlineHelpText>
    <label>Stage Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>