force-app/main/default/objects/Opportunity_Stage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Stage_Number__c</columns>
    <columns>NAME</columns>
    <columns>Next_Stage__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>